# avatar-engine

./: .dockerignore  .env.example  .env.prod.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile  Dockerfile  GOVERNANCE.md  LICENSE  NOTICE  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
avatar/: __init__.py  cli.py  config.py  demo.py
avatar/api/: __init__.py  app.py  ratelimit.py  routes.py
avatar/dashboard/: avatar.css  index.html  landing.html  landing.js  lattice.js
avatar/engine/: __init__.py  _tool_runner.py  budget.py  db.py  idempotency.py  models.py  policy.py  registry.py  replay.py  runtime.py  schema.sql  tools.py  worker.py
avatar/sdk/: __init__.py
dashboard/: index.html
docs/: AVATAR.md  deployment.md  getting-started.md  troubleshooting.md
docs/oss-release/: 01-AUDIT.md  02-SECURITY_SCAN.md  03-DEPENDENCY_LICENSES.md  04-RELEASE_READINESS.md
tests/: __init__.py  conftest.py  test_api.py  test_crash_resume.py  test_engine.py  test_policy_budget.py  test_replay.py  test_schema_drift.py  test_startup_safety.py
